gps tracker v1: tracks only one point & minimal GUI

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
   <title>Real-Time GPS Tracker</title>
-  <script src="script.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
 <body>
   <h1>Real-Time GPS Tracker</h1>
-  <div id="data"></div>
+  <div id="map" style="height: 600px;"></div>
+  <script src="script.js"></script>
 </body>
 </html>
