added start/stop tracking and clear map buttons

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <h1>Real-Time GPS Tracker</h1>
+  <button id="startButton">Start Tracking</button>
+  <button id="stopButton">Stop Tracking</button>
+  <button id="clearButton">Clear Map</button>
   <div id="map" style="height: 600px;"></div>
   <script src="script.js"></script>
 </body>
